# Seth-AI-ecosystem

./: README.md
contracts/seth/: INJECT-LIQUIDITY-README.md  PoolB.sol  ProbeBridge.sol  ProbeCallee.sol  ProbeCaller.sol  ProbeMultiReturn.sol  ProbePool.sol  ProbeTreasury.sol  SethBridge.sol  TEST-FLOWS.md  TeamPayroll.sol  (+28 more)
contracts/solana/: Anchor.toml  Cargo.toml  DEPLOY.md  README.md  deployer-keypair.json  deployment-info.json  docker-deploy.sh  package-lock.json  package.json  solanaBridge.rs  user-keypair.json
contracts/solana/dirm/: Cargo.toml
contracts/solana/dirm/src/: dirm.rs  errors.rs  lib.rs  math.rs  state.rs  tests.rs
contracts/solana/dirm/src/instructions/: initialize_pool.rs  initialize_vaults.rs  mod.rs  swap.rs  update_config.rs
contracts/solana/scripts/: close-buffers-wsl.sh  create-dirm.js  deploy-devnet.js  deploy-only-wsl.sh  deploy-solana.js  deploy-via-wsl.ps1  deploy-web.js  deploy-with-proxy.js  deploy-wsl.sh  deploy.js  inbound_sequential_test_report.py  init-root-user.js  init-test-user.js  initialize-bridge.js  initialize-pool.js  test-inbound-lock.js  test-process-revenue.js  test-proxy.js  test-set-referrer.js  transfer-sol.js
contracts/solana/src/: bridge.rs  constants.rs  errors.rs  events.rs  lib.rs  revenue.rs  state.rs  withdrawal.rs
docs/: bridge.md
relayer/: .env.bsc.example  .env.example  README-BSC.md  README.md  bsc-relayer-v2.js  bsc-relayer.js  bscClient.js  package-lock.json  package.json  price-service.js  register-address.js  relayer.js  send-bridge-once.js  seth-withdrawal-relayer.js  sethClient.js  start-from-deployment.ps1  test-seth-withdrawal.js  unified-relayer.js  verify-seth-bridge.js
(+6 files in other folders)
