[package]
name = "seth-bridge"
version = "0.1.0"
description = "Seth-Solana Cross-Chain Bridge with 15-50-35 Revenue Distribution"
edition = "2021"
license = "MIT"
repository = "https://github.com/seth-ai/bridge"

[lib]
crate-type = ["cdylib", "lib"]
name = "seth_bridge"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
solana-instruction = "=2.2.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1